[package]
edition = "2021"
name = "dont-starve-asset-processor"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rayon = "1.10.0"
anyhow = "1.0.98"
fast_image_resize = { version = "5.1.4", features = ["rayon", "image"] }
image = { version = "0.25.6" }
byteorder = "1.5.0"
num_enum = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
texpresso = { version = "2.0.2", features = ["rayon"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
